[tool.poetry]
name = "autoagora-agents"
version = "0.0.0"
authors = [
    "Alexis Asseman <alexis@semiotic.ai>",
    "Matt Deible <matt@semiotic.ai>",
    "Tomasz Kornuta <tomasz@semiotic.ai>",
    "Anirudh A. Patel <anirudh@semiotic.ai>"
]
description = ""
license = ""
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
packages = [
    { include = "autoagora_agents" },
]
[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.semantic_release]
upload_to_repository = false
version_source = "tag_only"
build_command = false
upload_to_release = false

[tool.poetry.dependencies]
python = "~3.10"
ConfigArgParse = "^1.5.3"
more-itertools = "^8.12.0"
numpy = "^1.22.3"
sacred = "^0.8.0"
gymnasium = "^0.27.0"
multipledispatch = "^0.6.0"
torch = [
    # Python 3.10
    {url="https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-1.11.0-cp310-none-macosx_10_9_x86_64.whl", markers = "python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-1.11.0-cp310-none-macosx_11_0_arm64.whl", markers = "python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'arm64'"}

]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pyright = "^1.1.244"
pylint = "^2.14.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.8"
mkdocstrings-python = "^0.8.3"
mike = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--strict-markers --durations=5 -vv"
markers = [
    "unit: marks tests as unit tests",
]

[tool.pylint.typecheck]
# List of members which are set dynamically and missed by pylint inference system, and
# so shouldn't trigger E1101 when accessed. Python regular expressions are accepted.
generated-members = ["numpy.*" ,"torch.*"]

[tool.pyright]
useLibraryCodeForTypes = true
